glib2.0 (2.6.6-1osso1) unstable; urgency=low

  * Upgrade to glib 2.6.6
  * debian/*: redo packaging to build directly from svn trunk

 -- Tommi Komulainen <tommi.komulainen@nokia.com>  Wed, 30 Nov 2005 17:56:39 +0200

glib2.0 (2.6.2-1osso8) unstable; urgency=low

  * Added gscanner patch from Tommi (bugs 16829 and 16264). It is an update
    to the existing gscanner patch.

 -- Kimmo Hämäläinen <kimmo.hamalainen@nokia.com>  Mon, 08 Aug 2005 15:22:17 +0300

glib2.0 (2.6.2-1osso7) unstable; urgency=low

  * Added patch for redirecting logging to syslog (bug 16628).

 -- Kimmo Hämäläinen <kimmo.hamalainen@nokia.com>  Wed, 03 Aug 2005 08:21:23 +0300

glib2.0 (2.6.2-1osso6) unstable; urgency=low

  * Saving some memory with a patch to fix Glib bug 160655.

 -- Kimmo Hämäläinen <kimmo.hamalainen@nokia.com>  Fri, 22 Apr 2005 12:39:28 +0300

glib2.0 (2.6.2-1osso5) unstable; urgency=low

  * Restored g_log(), g_print() and g_printerr() normal functionality.

 -- Kimmo Hämäläinen <kimmo.hamalainen@nokia.com>  Tue, 22 Mar 2005 12:52:31 +0200

glib2.0 (2.6.2-1osso4) unstable; urgency=low

  * g_print and g_printerr redefined as zero macros when DEBUG is not defined
  * undefining ENABLE_NLS 

 -- Kimmo Hämäläinen <kimmo.hamalainen@nokia.com>  Sat, 12 Mar 2005 20:21:12 +0200

glib2.0 (2.6.2-1osso3) unstable; urgency=low

  * Fixed bug 6441.

 -- Kimmo Hämäläinen <kimmo.hamalainen@nokia.com>  Thu, 24 Feb 2005 16:50:19 +0200

glib2.0 (2.6.2-1osso2) unstable; urgency=low

  * one more fix in gobject.h for debugging stuff

 -- Alexander Kanevskiy <alexander.kanevskiy@nokia.com>  Mon, 21 Feb 2005 20:17:28 +0200

glib2.0 (2.6.2-1osso1) unstable; urgency=low

  * fix for g_log()

 -- Alexander Kanevskiy <alexander.kanevskiy@nokia.com>  Mon, 21 Feb 2005 19:18:48 +0200

glib2.0 (2.6.2-1osso) unstable; urgency=low

  * Added Kuisma Salonen's gscanner patches.
  * Made g_log() and g_logv() zero macros in gmessages.h when DEBUG